# digitaldome

./: .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  package.json  pnpm-lock.yaml  pyproject.toml  tailwind.config.js
.github/workflows/: docker.yml
digitaldome/: context_processors.py  formatters.py  settings.py  urls.py  views.py  wsgi.py
digitaldome/common/: fields.py  mixins.py  models.py  shortcuts.py  tests.py  tokens.py  widgets.py
digitaldome/management/commands/: migrate_storage.py  rebuilddb.py
digitaldome/static/: site.webmanifest
digitaldome/static/css/: _base.css  base.css  base.tailwind
digitaldome/templates/: 404.html  base.html
digitaldome/templates/digitaldome/: index.html
digitaldome/templates/partials/: footer.html  nav.html  pagination.html
digitaldome/templates/widgets/: array_field.html  clearable_file_input_with_image_preview.html  time_widget.html
digitaldome/templatetags/: digitaldome_tags.py
digitaldome/utils/: image.py  requests.py  url.py
dome/: settings.py  urls.py  views.py  wsgi.py
dome/templates/: 404.html  base.html
dome/templatetags/: dome_tags.py
dome/utils/: env.py
entities/: admin.py  apps.py  factories.py  filters.py  forms.py  helpers.py  mappings.py  mixins.py  models.py  receivers.py  urls.py  utils.py  views.py
entities/migrations/: 0001_initial.py  0002_add_aliases_to_entities.py  0002_initial.py  0003_unique_name_constraints.py  0004_remove_book_author_remove_game_producer_and_more.py  0005_book_goodreads_url_game_steam_url_movie_imdb_url_and_more.py  0006_rename_producer_game_developer.py  0007_remove_book_book_unique_name_and_more.py  0008_change_uploaded_filenames.py  0009_alter_book_name_alter_game_name_alter_movie_name_and_more.py  0010_alter_book_options_alter_game_options_and_more.py  0011_remove_book_approved_remove_book_draft_and_more.py  0012_platform_remove_game_platforms_game_platforms.py  0013_remove_book_created_by_remove_game_created_by_and_more.py  0014_book_search_vector_game_search_vector_and_more.py  0015_remove_book_book_gin_search_vector_idx_and_more.py  0016_booktag_gametag_movietag_showtag_and_more.py  0017_delete_generictag_remove_book_new_tags_and_more.py  0018_book_slug_game_slug_movie_slug_show_slug.py  0019_add_slugs_to_all_entities.py  0020_alter_book_slug_alter_game_slug_alter_movie_slug_and_more.py  0021_booktag_aliases_gametag_aliases_movietag_aliases_and_more.py  0022_platform_aliases.py  0023_book_json_author_booktag_json_aliases_and_more.py  0024_remove_book_author_remove_booktag_aliases_and_more.py  0025_rename_json_author_book_author_and_more.py  0026_remove_book_book_trgm_name_idx_and_more.py
entities/templatetags/: entities.py
entities/tests/: test_search.py
integrations/: exporters.py  forms.py  importers.py  urls.py  views.py
integrations/openai/: client.py  prompts.py
tracking/: admin.py  apps.py  forms.py  mixins.py  models.py  receivers.py  urls.py  views.py
tracking/migrations/: 0001_initial.py  0002_initial.py  0003_alter_userstats_options.py  0004_delete_userstats.py
tracking/tests/: test_receivers.py  test_tracking_list.py
users/: apps.py  auth_forms.py  auth_views.py  forms.py  models.py  receivers.py  tokens.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_user_avatar.py  0003_user_bio.py  0004_remove_user_email_remove_user_email_verified_and_more.py  0005_remove_user_is_moderator.py  0006_remove_user_bio.py  0007_alter_user_avatar.py
(+40 files in other folders)
