[project]
name = "digitaldome"
version = "0.1.0"
description = "Comprehensive media tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.1.5",
    "django-filter>=24.3",
    "django-storages[s3]>=1.14.4",
    "factory-boy>=3.3.3",
    "gunicorn[gevent]>=23.0.0",
    "httpx>=0.28.1",
    "openai>=1.59.8",
    "pillow>=11.1.0",
    "psycopg>=3.2.4",
    "pyjwt>=2.10.1",
    "python-dotenv>=1.0.1",
    "python-magic>=0.4.27",
    "sentry-sdk[django]>=2.20.0",
    "whitenoise[brotli]>=6.8.2",
]

[project.optional-dependencies]
windows = ["psycopg-binary>=3.2.4", "python-magic-bin>=0.4.14"]

[dependency-groups]
dev = ["djlint>=1.36.4", "ipython>=8.31.0", "ruff>=0.9.2"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "ANN",
    "ASYNC",
    "S",
    "A",
    "DJ",
    "G",
    "PIE",
    "T20",
    "RSE",
    "SIM",
    "PTH",
    "PD",
    "TRY",
    "RUF",
]
ignore = ["ANN401", "TRY003", "SIM118"]

[tool.ruff.lint.per-file-ignores]
"**/management/commands/*.py" = ["A003"]
"**/migrations/0*_*.py" = ["RUF012"]

[tool.djlint]
ignore = "H006"
