[project]
name = "digitaldome"
version = "0.1.0"
description = "Comprehensive media tracker"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2",
    "django-filter>=25.1",
    "django-storages[s3]>=1.14.6",
    "factory-boy>=3.3.3",
    "gunicorn[gevent]>=23.0.0",
    "pillow>=11.2.1",
    "psycopg>=3.2.6",
    "python-dotenv>=1.1.0",
    "python-magic>=0.4.27",
    "requests>=2.32.3",
    "sentry-sdk[django]>=2.26.1",
    "whitenoise[brotli]>=6.9.0",
]

[project.optional-dependencies]
windows = ["psycopg-binary>=3.2.6", "python-magic-bin>=0.4.14"]

[dependency-groups]
dev = ["djlint>=1.36.4", "ipython>=8.31.0", "ruff>=0.9.2"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "ANN",
    "ASYNC",
    "S",
    "A",
    "DJ",
    "G",
    "PIE",
    "T20",
    "RSE",
    "SIM",
    "PTH",
    "PD",
    "TRY",
    "RUF",
]
ignore = ["ANN401", "TRY003", "SIM118"]

[tool.ruff.lint.per-file-ignores]
"**/management/commands/*.py" = ["A003"]
"**/migrations/0*_*.py" = ["RUF012"]

[tool.djlint]
ignore = "H006"
